--- a/期中專題/期中專題.ipynb
+++ b/期中專題/期中專題.ipynb
@@ -31,11 +31,11 @@
    "metadata": {},
    "source": [
     "## ㄧ、爬蟲程式\n",
-    "爬蟲程式的部分，由於內容太多，所以我把用Scrapy實現爬蟲的過程寫在Hackmd檔案中，煩請助教、老師一定要查看，我認真寫很久QQ\n",
+    "爬蟲程式的部分，由於內容太多，所以我把用Scrapy實現爬蟲的過程寫在Github README檔案中，如下連結，煩請助教、老師一定要查看，我認真寫很久QQ\n",
     "\n",
     "透過Scrapy抓取1111及104的資料：\n",
     "\n",
-    "https://hackmd.io/4_bn5cjiSD6p_58DHVUK0w\n"
+    "https://github.com/b10402113/Python-Machine-Learning/tree/master/%E6%9C%9F%E4%B8%AD%E5%B0%88%E9%A1%8C\n"
    ]
   },
   {
